force-app/main/default/objects/Conversion__mdt/Conversion__mdt.object-meta.xml
<CustomObject>
    <label>Conversion</label>
    <pluralLabel>Conversions</pluralLabel>
</CustomObject>