force-app/main/default/objects/Conversion__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civilite</fullName>
                <default>true</default>
                <label>Civilite</label>
            </value>
            <value>
                <fullName>Pays</fullName>
            </value>
            <value>
                <fullName>GarantieMiseEnJeu</fullName>
                <label>Garantie mise en jeu</label>
            </value>
            <value>
                <fullName>CodeLieuExamen</fullName>
                <label>Lieu examen</label>
            </value>
            <value>
                <fullName>SituationMaterielsExpertise</fullName>
                <label>Situation des matériels à expertiser</label>
            </value>
            <value>
                <fullName>TypeFranchise</fullName>
                <label>Type de Franchise</label>
            </value>
            <value>
                <fullName>IndicateurReglementDirect</fullName>
                <label>Indicateur Règlement Direct</label>
            </value>
            <value>
                <fullName>ConditionsAchatVehicule</fullName>
                <label>Conditions d&#39;achat du véhicule</label>
            </value>
            <value>
                <fullName>VehiculeAExpertiser</fullName>
            </value>
            <value>
                <fullName>ZonesChoc</fullName>
                <label>Zone(s) de choc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>