force-app/main/default/objects/Conversion__mdt/fields/ValeurBrute__c.field-meta.xml
<CustomField>
    <fullName>ValeurBrute__c</fullName>
    <label>Valeur Brute</label>
    <length>10</length>
    <type>Text</type>
</CustomField>