force-app/main/default/objects/Conversion__mdt/fields/ValeurXPS__c.field-meta.xml
<CustomField>
    <fullName>ValeurXPS__c</fullName>
    <label>Valeur XPS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>